# hungarianAlgorithm

./: CMakeLists.txt  README.md
images/: hungarianAlgorithmFlow
include/hungarianAlgorithm/: hungarian.h  hungarian_old.h  utils.h
src/: hungarian.cpp  main.cpp
